Bug 1430907: Part 1 - Remove AudioSession from Windows content process r=kinetik

AudioSession, which handles things like making sure that the volume slider in the system tray has the right name and icon and is aligned for all processes, is not needed in content processes any longer since bug 1432303 remoted audio use away from content.

Differential Revision: https://phabricator.services.mozilla.com/D64445